Fix issues with churches

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 APP_NAME=snatchi
 NODE_ENV =production
-MONGO_URI=mongodb+srv://sr72:Kcmkcm12345!@cluster0.ihqj3.mongodb.net/snatchi_dev?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://sr72:Kcmkcm12345!@cluster0.ihqj3.mongodb.net/jerur_next_dev?retryWrites=true&w=majority
 JWT_SECRET=KDJHF7823RHIU3289FJ9321456777I2G8FG239
 MAIL_PROVIDER="SEND_GRID"
 USER_NAME =noreply@suftnet.com
