--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./app/*", "./src/*", "./*"]
+      "@/*": ["./app/*", "./src/*", "./*", "./utils/*"]
     },
     "plugins": [
       {
