--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bcrypt": "^5.0.0",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.2.0",
+    "browser-image-compression": "^2.0.2",
     "bunyan": "^1.8.15",
     "chart.js": "^4.4.7",
     "classnames": "^2.5.1",
