--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@getbrevo/brevo": "^3.0.1",
     "@mui/material": "^6.0.1",
     "@mui/x-date-pickers": "^7.23.2",
     "@popperjs/core": "^2.11.5",
