--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@stripe/stripe-js": "^1.18.0",
     "@types/react-fontawesome": "^1.6.8",
     "animate.css": "^4.1.1",
-    "apexcharts": "^3.48.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^3.0.2",
@@ -61,6 +60,7 @@
     "google-auth-library": "^9.15.1",
     "handlebars": "^4.7.7",
     "i18next": "^23.12.2",
+    "install": "^0.13.0",
     "isotope-layout": "^3.0.6",
     "itooltip": "^1.1.1",
     "jose": "^5.9.6",
@@ -88,7 +88,6 @@
     "plyr-react": "^5.1.0",
     "progressbar.js": "^1.1.0",
     "react": "^18.0.0",
-    "react-apexcharts": "^1.4.1",
     "react-big-calendar": "^1.17.1",
     "react-bootstrap": "^2.10.4",
     "react-chartjs-2": "^5.2.0",
@@ -98,7 +97,6 @@
     "react-dom": "^18.0.0",
     "react-email": "^3.0.6",
     "react-icons": "^4.8.0",
-    "react-leaflet": "^5.0.0-rc.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.3.3",
@@ -119,6 +117,7 @@
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^8.3.2",
     "typewriter-effect": "^2.21.0",
+    "victory": "^37.3.6",
     "zod": "^3.23.8",
     "zod-i18n-map": "^2.27.0"
   },
