--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
+      "@/utils/*": ["./utils/*"],
       "@/*": ["./app/*", "./src/*", "./*", "./utils/*"]
     },
     "plugins": [
