fix: resolve module alias conflicts and remove deprecated next.config.js options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/utils/*": ["./utils/*"],
+      "@/utils/*": ["./utils/*", "./src/utils/*"],
       "@/*": ["./app/*", "./src/*", "./*", "./utils/*"]
     },
     "plugins": [
