--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "build-local": "NODE_ENV=local next build",
     "start": "next start",
-    "sass": "sass --no-source-map src/assets/scss:public/css"
+    "sass": "sass --no-source-map src/assets/scss:public/css",
+    "build:render": "yarn --frozen-lockfile install && NODE_OPTIONS='--trace-warnings' yarn build"
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.8.0",
