Fix issues with mongodb connections --

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./app/*", "./src/*", "./*"]
+      "@/*": ["./*"]
     },
     "plugins": [
       {
@@ -26,14 +26,6 @@
       }
     ]
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.js",
-    "**/*.jsx",
-    ".next/types/**/*.ts",
-    "middleware.js"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", ".next/types/**/*.ts", "middleware.js"],
   "exclude": ["node_modules"]
 }
