Fix issues with path

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["*"]
+     "@src/*": ["src/*"],
+  "@root/*": ["*"],
+  "@utils/*": ["utils/*"],
+  "@store/*": ["Store/*"],
+  "@validator/*": ["validator/*"]
     }
   }
 }
