--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,11 +2,21 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-     "@src/*": ["src/*"],
-  "@root/*": ["*"],
-  "@utils/*": ["utils/*"],
-  "@store/*": ["Store/*"],
-  "@validator/*": ["validator/*"]
+      "@src/*": [
+        "src/*"
+      ],
+      "@root/*": [
+        "*"
+      ],
+      "@utils/*": [
+        "utils/*"
+      ],
+      "@store/*": [
+        "Store/*"
+      ],
+      "@validator/*": [
+        "validator/*"
+      ]
     }
   }
 }
